--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -34,7 +34,7 @@ body {
 .main .main_img {
     width: 100%;
     height: 100%;
-    background-image: url(../Images/Main.jpg);
+    background-image: url(https://s3.bmp.ovh/imgs/2022/03/87bbaff8e7637ddb.jpg);
     background-size: 100% 100%;
 }
 
