--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -256,18 +256,25 @@ body {
 
 .article .article_card {
     position: relative;
+    margin-bottom: 30px;
     width: 100%;
-    height: 230px;
+    height: 240px;
+    border-radius: 20px;
+    box-shadow: 1px 0 8px rgb(0,0,0,0.3);
+    overflow: hidden;
 }
 
 .article .article_card .article_card_left {
-    width: 750px;
+    position: position;
+    left: 0;
+    top: 0;
+    width: 700px;
     height: 100%;
-    background-image: url(/src/Images/wait4.jpeg);
+    background-image: url(../Images/wait4.jpeg);
     background-size: 100% 180%;
-    background-position: 30% 30%;
-    -webkit-filter: blur(0.4em);
-    filter: blue(0.4em);
+    background-position: 0 30%;
+    -webkit-filter: blur(0.8em);
+    filter: blur(0.8em);
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
@@ -275,15 +282,58 @@ body {
 .article .article_card .article_card_right {
     position: absolute;
     right: 0;
-    top: 0;
+    top: -0.5%;
     width: 350px;
-    height: 100%;
+    height: 101%;
     background-image: url(../Images/wait4.jpeg);
     background-size: 120% 120%;
     background-position: 50% 50%;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
     -webkit-clip-path: polygon(15% 0,100% 0,100% 100%,0 100%);
     clip-path: polygon(20% 0,100% 0,100% 100%,0 100%);
 }
+
+.text {
+    position: relative;
+    color: rgb(255,225,255);
+    text-shadow: 0 0 2px rgb(0,0,0,0.5);
+}
+
+.article_img {
+    position: absolute;
+    z-index: 999;
+    left: 80px;
+    top: 50px;
+    width: 25px;
+    height: 25px;
+    background-image: urL(/src/Images/Date.png);
+    background-size: 100% 100%;
+}
+
+.article_date {
+    position: absolute;
+    z-index: 999;
+    left: 120px;
+    top: 52px;
+    font-size: 1.1em;
+}
+
+.article_title {
+    position: absolute;
+    z-index: 999;
+    left: 80px;
+    top: 90px;
+    font-size: 1.9em;
+}
+
+.article_disctription {
+    position: absolute;
+    z-index: 999;
+    left: 120px;
+    top: 150px;
+    font-size: 1.1em;
+}
+
+
 
