--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -34,7 +34,7 @@ body {
 .main .main_img {
     width: 100%;
     height: 100%;
-    background-image: url(https://s3.bmp.ovh/imgs/2022/03/87bbaff8e7637ddb.jpg);
+    background-image: url(../Images/Main.jpg);
     background-size: 100% 100%;
 }
 
@@ -132,6 +132,7 @@ body {
 }
 
 .individual_label_user_name {
+    cursor: pointer;
     position: absolute;
     top: 250px;
     left: calc(50% - 100px);
@@ -139,6 +140,7 @@ body {
     height: 50px;
     text-align: center;
     font-size: 2.2em;
+    font-weight: 600;
     text-shadow: 0 0 3px rgb(0,0,0,0.3);
 }
 
@@ -178,6 +180,7 @@ body {
 }
 
 .individual_label_information_box_name {
+    cursor: pointer;
     position: absolute;
     top: 2px;
     left: calc(50% - 25px);
@@ -188,6 +191,7 @@ body {
 }
 
 .individual_label_information_box_number {
+    cursor: pointer;
     position: absolute;
     top: 35px;
     left: calc(50% - 20px);
@@ -247,26 +251,34 @@ body {
 
 .content_right {
     position: absolute;
-    left: 410px;
+    left: 460px;
     top: 32px;
-    width: 990px;
+    width: 920px;
     height: 1200px;
 }
 
 .article .article_card {
+    cursor: pointer;
     position: relative;
+    margin-bottom: 30px;
     width: 100%;
-    height: 230px;
+    height: 240px;
+    border-radius: 20px;
+    box-shadow: 1px 0 8px rgb(0,0,0,0.3);
+    overflow: hidden;
 }
 
 .article .article_card .article_card_left {
-    width: 750px;
+    position: position;
+    left: 0;
+    top: 0;
+    width: 700px;
     height: 100%;
-    background-image: url(/src/Images/wait4.jpeg);
+    background-image: url(../Images/Article4.jpg);
     background-size: 100% 180%;
-    background-position: 30% 30%;
-    -webkit-filter: blur(0.4em);
-    filter: blue(0.4em);
+    background-position: 0 30%;
+    -webkit-filter: blur(0.8em);
+    filter: blur(0.8em);
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
@@ -274,15 +286,92 @@ body {
 .article .article_card .article_card_right {
     position: absolute;
     right: 0;
-    top: 0;
+    top: -0.5%;
     width: 350px;
-    height: 100%;
-    background-image: url(../Images/wait4.jpeg);
+    height: 101%;
+    background-image: url(../Images/Article4.jpg);
     background-size: 120% 120%;
     background-position: 50% 50%;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
     -webkit-clip-path: polygon(15% 0,100% 0,100% 100%,0 100%);
     clip-path: polygon(20% 0,100% 0,100% 100%,0 100%);
 }
 
+.text {
+    position: relative;
+    font-weight: 700;
+    color: rgb(255,225,255);
+    text-shadow: 0 0 2px rgb(0,0,0,0.5);
+}
+
+.article_img {
+    position: absolute;
+    z-index: 999;
+    left: 80px;
+    top: 50px;
+    width: 25px;
+    height: 25px;
+    background-image: urL(/src/Images/Date.png);
+    background-size: 100% 100%;
+}
+
+.article_date {
+    position: absolute;
+    z-index: 999;
+    left: 120px;
+    top: 52px;
+    font-size: 1.1em;
+}
+
+.article_title {
+    position: absolute;
+    z-index: 999;
+    left: 80px;
+    top: 90px;
+    font-size: 1.9em;
+}
+
+.article_disctription {
+    position: absolute;
+    z-index: 999;
+    left: 120px;
+    top: 150px;
+    font-size: 1.1em;
+}
+
+/* reserve */
+.text_reverse {
+    margin-left: 300px;
+}
+
+.article .article_card .article_card_left_reverse {
+    position: absolute;
+    left: 260px;
+    top: 0;
+}
+
+.article .article_card .article_card_right_reverse {
+    position: absolute;
+    left: 0;
+    top: -0.5%;
+    -webkit-clip-path: polygon(0 0,80% 0,100% 100%,0 100%);
+    clip-path: polygon(0 0,80% 0,100% 100%,0 100%);
+    border-bottom-right-radius: 0;
+}
+
+.article .article_card .article_img2 {
+    background-image: url(../Images/Article.jpg);
+}
+
+.article .article_card .article_img3 {
+    background-image: url(../Images/Article3.jpg);
+}
+
+.article .article_card .article_img4 {
+    background-image: url(../Images/Article6.jpg);
+}
+
+.article .article_card .article_img5 {
+    background-image: url(../Images/Article5.jpg);
+}
